# RichEvent

./: CMakeLists.txt
examples/: CMakeLists.txt  reader.cpp  reader_pull.cpp  writer.cpp  writer_push.cpp
include/: richevent.h  richevent_reader.h  richevent_writer.h
src/: richevent_reader.cpp  richevent_writer.cpp
